--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -2,12 +2,9 @@
 ---
 
 @article{einstein1905molekularkinetischen,
-  title={Optimizing concrete mixture with machine learning, a new method for developing low carbon concrete (paper is under review)},
-  author={Shahrokhishahraki, M. and Malekpour, M. and Mirvalad, S. and Faraone, G.},
-  journal={Materials in Civil Engineering,},
-  pages={549--560},
-  year={2022},
-  publisher={Wiley Online Library},
-  preview={civilpaper.png},
+  title={Bifrost: Efficient and Secure Protocol for a Machine Learning Platform on Blockchain.(paper is in progress)},
+  author={Rezaei , A. and Bejani, MM. and Samiei, H,.},
+  year={2023},
+  preview={paper.png},
   selected={true}
 }
